appId: com.triada.app
---
- launchApp:
    clearState: true
- assertVisible: 'Bienvenido a Triada'
- tapOn:
    id: income
- inputText: '1200'
- hideKeyboard
- tapOn: 'Crear Presupuesto'
- assertVisible: 'Agregar Gasto'
- assertVisible: '$1200.00'
- assertVisible: 'Necesidades'
